RESOLVED FIXED101185
[GTK] accessibility/svg-remote-element.html is failing
https://bugs.webkit.org/show_bug.cgi?id=101185
Summary [GTK] accessibility/svg-remote-element.html is failing
Zan Dobersek
Reported 2012-11-04 23:14:08 PST
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20webkit.org&tests=accessibility%2Fsvg-remote-element.html Here's the diff: --- /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/accessibility/svg-remote-element-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/accessibility/svg-remote-element-actual.txt @@ -9,29 +9,29 @@ PASS successfullyParsed is true TEST COMPLETE -container location: (7, 43) -Face role: AXRole: AXButton -Face label: AXDescription: face -FaceX: 0 -FaceY: 0 +container location: (-335886513, -16294.5) +Face role: AXRole: AXUnknown +Face label: +FaceX: 1 +FaceY: 1 -Eye role: AXRole: AXButton -Eye label: AXDescription: left-eye -EyeX: 103 -EyeY: 148 +Eye role: AXRole: AXUnknown +Eye label: +EyeX: 1 +EyeY: 1 -Nose role: AXRole: AXButton -Nose label: AXDescription: nose -NoseX: 193 -NoseY: 206 +Nose role: AXRole: AXUnknown +Nose label: +NoseX: 1 +NoseY: 1 -Mouth role: AXRole: AXButton -Mouth label: AXDescription: smile -MouthX: 115 -MouthY: 274.5 +Mouth role: AXRole: AXUnknown +Mouth label: +MouthX: 1 +MouthY: 1
Attachments
Proposed patch (6.73 KB, patch)
2013-10-24 02:11 PDT, Rob Płóciennik
no flags
Proposed patch (6.73 KB, patch)
2013-10-24 05:31 PDT, Rob Płóciennik
no flags
Proposed patch (6.76 KB, patch)
2013-10-30 01:32 PDT, Rob Płóciennik
no flags
Rob Płóciennik
Comment 1 2013-10-24 02:11:13 PDT
Created attachment 215039 [details] Proposed patch
Rob Płóciennik
Comment 2 2013-10-24 05:31:55 PDT
Created attachment 215055 [details] Proposed patch
Rob Płóciennik
Comment 3 2013-10-30 01:32:11 PDT
Created attachment 215483 [details] Proposed patch
Rob Płóciennik
Comment 4 2013-10-30 02:00:36 PDT
Comment on attachment 215483 [details] Proposed patch Could someone from GTK take a look, please?
Mario Sanchez Prada
Comment 5 2013-10-30 05:03:23 PDT
Comment on attachment 215483 [details] Proposed patch Sounds good to me too
WebKit Commit Bot
Comment 6 2013-10-30 05:32:56 PDT
Comment on attachment 215483 [details] Proposed patch Clearing flags on attachment: 215483 Committed r158267: <http://trac.webkit.org/changeset/158267>
WebKit Commit Bot
Comment 7 2013-10-30 05:32:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.