[GTK] accessibility/svg-remote-element.html is failing https://bugs.webkit.org/show_bug.cgi?id=101185

Patch by Robert Plociennik <r.plociennik@samsung.com> on 2013-10-30
Reviewed by Chris Fleizach.

Tools:

Implemented missing methods by mimicing existing functionality in
AccessibilityObject::clickPoint() using available ATK API.

* DumpRenderTree/atk/AccessibilityUIElementAtk.cpp:
(AccessibilityUIElement::clickPointX): Implemented.
(AccessibilityUIElement::clickPointY): Implemented.
* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::clickPointX): Implemented.
(WTR::AccessibilityUIElement::clickPointY): Implemented.

LayoutTests:

Provided new test expectations since resulting discrepancies are believed to be
platform related.

* platform/gtk-wk2/TestExpectations: The test is no longer failing.
* platform/gtk/accessibility/svg-remote-element-expected.txt: Added.
* platform/gtk/TestExpectations: The test is no longer failing.

Canonical link: https://commits.webkit.org/141635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158267 268f45cc-cd09-0410-ab3c-d52691b4dbfc