Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp
@@ -868,14 +868,30 @@ double AccessibilityUIElement::height()
 
 double AccessibilityUIElement::clickPointX()
 {
-    // FIXME: implement
-    return 0;
+    if (!ATK_IS_COMPONENT(m_element.get()))
+        return 0;
+
+    int x, y;
+    atk_component_get_position(ATK_COMPONENT(m_element.get()), &x, &y, ATK_XY_WINDOW);
+
+    int width, height;
+    atk_component_get_size(ATK_COMPONENT(m_element.get()), &width, &height);
+
+    return x + width / 2.0;
 }
 
 double AccessibilityUIElement::clickPointY()
 {
-    // FIXME: implement
-    return 0;
+    if (!ATK_IS_COMPONENT(m_element.get()))
+        return 0;
+
+    int x, y;
+    atk_component_get_position(ATK_COMPONENT(m_element.get()), &x, &y, ATK_XY_WINDOW);
+
+    int width, height;
+    atk_component_get_size(ATK_COMPONENT(m_element.get()), &width, &height);
+
+    return y + height / 2.0;
 }
 
 double AccessibilityUIElement::intValue() const
